--- a/css/signup/sign-end.css
+++ b/css/signup/sign-end.css
@@ -19,13 +19,12 @@ ol{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: clamp(1rem, 5vw, 15rem);
     color: var(--color-inactive);
     flex-wrap: nowrap;
     text-align: center;
 }
 ol li.arrow {
-    flex: 0 0 auto; /* 크기 고정 */
+    flex: 0 0 auto;
     width: 1.25rem;
     height: 1.25rem;
     background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
@@ -35,9 +34,9 @@ ol li.act{
     color: #000;
 }
 ol li span{
-    margin-right: var(--space-normal);
+    font-style: inherit;
+    margin-right: 1rem;
     font-size: 0.9rem;
-    
 }
 ol li strong{
     font-size: 1.25rem;
@@ -106,15 +105,6 @@ ol li strong{
     .common_frame {
         margin: 0 1rem;
     }
-    ol {
-        width: 100%;
-        max-width: 100%;
-        flex-wrap: wrap;
-        gap: 0.5rem;
-    }
-    ol li {
-        flex: 1 1 auto;
-    }
     .but-main a{
         width: 245px;
     }
@@ -123,13 +113,12 @@ ol li strong{
     }
 }
 @media (max-width: 320px){
-    ol{
+            ol{
+        gap: 0.5rem;
         flex-wrap: nowrap;
     }
     ol li{
-        display: flex ;
-    flex-direction: column;
-    /* justify-content: flex-start; */
-    /* align-items: flex-start; */
-    text-align: left;}
+        display: flex;
+        flex-direction: column;
+    }
 }
