--- a/css/signup/terms-of-service.css
+++ b/css/signup/terms-of-service.css
@@ -1,15 +1,6 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
 html{
     font-size: var(--basic-size-pc);
 }
-/* .common_frame{
-    padding-top: 6rem;
-} */
 h1{
     text-align: center;
     margin-top: var(--space-4x-large);
@@ -22,13 +13,12 @@ ol{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: clamp(1rem, 5vw, 15rem);
     color: var(--color-inactive);
     flex-wrap: nowrap;
     text-align: center;
 }
-.arrow {
-    flex: 0 0 auto; /* 크기 고정 */
+ol li.arrow {
+    flex: 0 0 auto;
     width: 1.25rem;
     height: 1.25rem;
     background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
@@ -38,6 +28,7 @@ ol li.act{
     color: #000;
 }
 ol li span{
+    font-style: inherit;
     margin-right: 1rem;
     font-size: 0.9rem;
 }
@@ -96,17 +87,6 @@ h2 span{
 }
 
 @media (max-width:1460px) {
-    html{
-        font-size: var(--basic-size-tap);
-    }
-    .common_frame{
-        margin: 0 3rem;
-    }
-    ol{
-        max-width: 790px;
-        justify-content: space-between;
-        gap: var(--space-3x-large);
-    }
     .box-txt{
         height: 264px;
     }
@@ -116,21 +96,6 @@ h2 span{
     }
 }
 @media (max-width: 768px) {
-    html {
-        font-size: var(--basic-size-mobile);
-    }
-    .common_frame {
-        margin: 0 1rem;
-    }
-    ol {
-        width: 100%;
-        max-width: 100%;
-        flex-wrap: wrap; /* 리스트 줄바꿈 허용 */
-        gap: 0.5rem; /* 좁은 화면에서 gap 줄이기 */
-    }
-    ol li {
-        flex: 1 1 auto; /* 화면에 맞게 늘어나게 */
-    }
     .box-txt {
         height: 162px;
     }
@@ -145,12 +110,11 @@ h2 span{
 }
 @media (max-width: 320px){
     ol{
+        gap: 0.5rem;
         flex-wrap: nowrap;
     }
     ol li{
-        display: flex ;
-    flex-direction: column;
-    /* justify-content: flex-start; */
-    /* align-items: flex-start; */
-    text-align: left;}
+        display: flex;
+        flex-direction: column;
+    }
 }
