--- a/css/community/community-detail.css
+++ b/css/community/community-detail.css
@@ -1,12 +1,3 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
-html{
-    font-size: var(--basic-size-pc);
-}
 .common_frame h1{
     text-align: center;
     text-transform: uppercase;
@@ -32,6 +23,7 @@ html{
     gap: 2rem;
     border-bottom: 1px solid #818181;
     padding: var(--space-x-small) var(--space-normal);
+    text-align: center;
 }
 .post-txt{
     min-height: 300px;
@@ -98,27 +90,11 @@ html{
     text-align: center;
     padding: 0 var(--space-normal);
 }
-@media (max-width:1024px){
-    html{
-    font-size: var(--basic-font-tab);
-    }
-    .common_frame{
-        width: auto;
-        margin: 0 auto; 
-        padding: 0 3rem;
-        /* 나중에 수정 */
-    }
+@media (max-width:1460px){
+
 }
 @media (max-width:768px){
-    html{
-    font-size: var(--basic-font-mobile);
-    }
-    .common_frame{
-        width: auto;
-        margin: 0 auto;
-        padding: 0 1rem;
-        /* 나중에 수정 */
-    }
+
     .post-next-date,
     .post-next-view,
     .post-pre-date,
