--- a/css/findstore/find-of-store.css
+++ b/css/findstore/find-of-store.css
@@ -78,13 +78,16 @@ h3{
     .search{
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+    }
+    .search h1{
+        margin-right: 0;
+    }
+    #search-store{
+        height: 53px;
     }
     .search h1{
         margin-bottom: 2rem;
-    }
-    .search form{
-        width: calc(100% - 16rem); /* 양쪽 9rem씩 = 18rem */
-        max-width: none;
     }
     fieldset{
         width: 100%;
