상세페이지 수정할 때 콘솔 잘 보고 리졸트 콘솔 찍어보고 배열 오타 확인해라제발

--- a/css/lip_detail.css
+++ b/css/lip_detail.css
@@ -6,6 +6,11 @@
     display: block;
 }
 
+.detail_img_pc figure img{
+    width: 100%;
+    object-fit: cover;
+}
+
 .review_wrap{
     position: fixed;
     left: 0;
