--- a/css/order/order-confirmation.css
+++ b/css/order/order-confirmation.css
@@ -1,12 +1,3 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
-html{
-    font-size: var(--basic-size-pc);
-}
 h1{
     text-align: center;
     margin-top: var(--space-4x-large);
@@ -65,17 +56,11 @@ tbody td{
     display: table-cell;
 }
 @media (max-width:1024px) {
-    html{
-        font-size: var(--basic-size-tap);
-    }
+    h1 {
+    margin-top: 6rem;
+}
 }
 @media (max-width: 768px) {
-    html {
-        font-size: var(--basic-size-mobile);
-    }
-    .common_frame {
-        margin: 0 1rem;
-    }
     thead {
         display: none;
     }
