--- a/css/order/order-finsh.css
+++ b/css/order/order-finsh.css
@@ -1,12 +1,3 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
-html{
-    font-size: var(--basic-size-pc);
-}
 .common_frame h1{
     text-align: center;
     text-transform: uppercase;
@@ -115,6 +106,15 @@ tbody td{
 
 }
 @media (max-width: 768px) {
+    ol {
+    gap: 0.5rem;
+    flex-wrap: nowrap;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
     thead {
         display: none;
     }
@@ -204,4 +204,11 @@ tbody td{
         font-weight: 700;
         font-size: 1.1rem;
     }
+}
+@media (max-width:320px){
+    ol li {
+    text-align: left;
+    flex-direction: column;
+    display: flex;
+}
 }
