--- a/css/signup/information.css
+++ b/css/signup/information.css
@@ -254,6 +254,14 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 }
 @media (max-width: 768px) {
+            ol {
+    gap: 0.5rem;
+    flex-wrap: nowrap;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
     h1 {
         font-size: 1.5rem;
         margin-top: var(--space-2x-large);
@@ -421,12 +429,9 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 }
 @media (max-width:320){
-        ol{
-        gap: 0.5rem;
-        flex-wrap: nowrap;
-    }
-    ol li{
-        display: flex;
-        flex-direction: column;
-    }
+    ol li {
+    text-align: left;
+    flex-direction: column;
+    display: flex;
+}
 }
