--- a/css/signup/sign-end.css
+++ b/css/signup/sign-end.css
@@ -1,12 +1,3 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
-html{
-    font-size: var(--basic-size-pc);
-}
 h1{
     text-align: center;
     margin-top: var(--space-4x-large);
@@ -84,12 +75,6 @@ ol li strong{
 }
 
 @media (max-width:146px) {
-    html{
-        font-size: var(--basic-size-tap);
-    }
-    .common_frame{
-        margin: 0 3rem;
-    }
     ol{
         max-width: 790px;
         justify-content: space-between;
@@ -99,12 +84,14 @@ ol li strong{
 
 }
 @media (max-width: 768px) {
-    html {
-        font-size: var(--basic-size-mobile);
-    }
-    .common_frame {
-        margin: 0 1rem;
-    }
+        ol {
+    gap: 0.5rem;
+    flex-wrap: nowrap;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
     .but-main a{
         width: 245px;
     }
@@ -113,12 +100,9 @@ ol li strong{
     }
 }
 @media (max-width: 320px){
-            ol{
-        gap: 0.5rem;
-        flex-wrap: nowrap;
-    }
-    ol li{
-        display: flex;
-        flex-direction: column;
-    }
+    ol li {
+    text-align: left;
+    flex-direction: column;
+    display: flex;
+}
 }
