--- a/css/serch-modal.css
+++ b/css/serch-modal.css
@@ -1,10 +1,15 @@
 .serch-modal{
+    display: none;
     position: fixed;
     inset: 0;
     flex-direction: column;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 100;
+    width: 100%;
+}
+.serch-modal.show {
+  display: flex;
 }
 .serch-modal-content{
     background-color: #fff;
@@ -14,6 +19,7 @@
     align-items: center;
     flex-direction: column;
     padding-top: 100px;
+    width: 100%;
 }
 fieldset{
     border: none;
