--- a/css/header_smart.css
+++ b/css/header_smart.css
@@ -3,6 +3,7 @@
     .header_smart{
         display: block;
         width: 100%;
+        height: 80px;
         background-color: #000;
         color: #fff;
         position: fixed;
@@ -15,6 +16,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-top: .6rem;
     }
 
     .logo_smart{
@@ -151,6 +153,14 @@
 }
 
 @media (max-width: 768px){
+    .header_smart{
+        height: 50px;
+    }
+    
+    .header_smart>.common_frame{
+        padding-top: .5rem;
+    }
+
     .logo_smart img{
         height: 1rem;
     }
