--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@
     width: 100%;
 }
 
-.review-item a img {
+.review-item a+img {
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
