--- a/css/skincare/lotion.css
+++ b/css/skincare/lotion.css
@@ -113,3 +113,11 @@
     font-weight: 700;
 }
 
+@media (max-width: 768px){
+    .btn-like-heart{
+        height: 20px;
+    }
+    .btn-like-heart img{
+        height: 100%;
+    }
+}
