--- a/css/skincare/repair-serum.css
+++ b/css/skincare/repair-serum.css
@@ -114,3 +114,11 @@
     font-weight: 700;
 }
 
+@media (max-width: 768px){
+    .btn-like-heart{
+        height: 20px;
+    }
+    .btn-like-heart img{
+        height: 100%;
+    }
+}
