--- a/css/mypage/user-info.css
+++ b/css/mypage/user-info.css
@@ -157,6 +157,11 @@ tbody td{
     .common_frame .top{
         flex-direction: column;
     }
+    .order-step li {
+    position: relative;
+    width: auto;
+    text-align: center;
+    }
     .user-email{
         text-align: right;
     }
@@ -255,4 +260,7 @@ tbody td{
         font-weight: 700;
         font-size: 1.1rem;
     }
+}
+@media (max-width:320px){
+
 }
