--- a/css/header_smart.css
+++ b/css/header_smart.css
@@ -16,7 +16,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-top: .6rem;
+        /* padding-top: .6rem; */
+        height: 100%;
     }
 
     .logo_smart{
@@ -158,13 +159,14 @@
     }
     
     .header_smart>.common_frame{
-        padding-top: .5rem;
+        /* padding-top: .5rem; */
     }
 
     .logo_smart img{
         height: 1rem;
     }
     .btn_all_menu img {
-        height: 1rem;
+        height: 100%;
+        width: 100%;
     }
 }
