--- a/css/nonMemberOrder/non-member-order-inquiry.css
+++ b/css/nonMemberOrder/non-member-order-inquiry.css
@@ -26,11 +26,15 @@ form{
     width: 100%;
     height: 60px;
     font-size: 1.25rem;
+    padding: 0 1rem;
+    box-sizing: border-box;
 }
 #order-name{
     width: 100%;
     height: 60px;
     font-size: 1.25rem;
+    padding: 0 1rem;
+    box-sizing: border-box;
 }
 fieldset{
     display: flex;
