--- a/css/service.css
+++ b/css/service.css
@@ -174,7 +174,9 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 1rem;
 }
 .reservation-request{
-    width: 84%;
+    flex: 1;
+    width: 0;
+    min-width: 0;
 }
 #reservation-request {
     width: 100%;
