--- a/css/serch-modal.css
+++ b/css/serch-modal.css
@@ -25,10 +25,10 @@ fieldset{
     border: none;
     position: relative;
 }
-#search-txt{
+#search-txt {
     width: 850px;
-    height: 40px;
-    padding: 0.5rem 1rem;
+    /* height: 40px; */
+    padding: 1rem 1rem;
     font-size: 1.25rem;
 }
 fieldset a{
