--- a/css/signup/information.css
+++ b/css/signup/information.css
@@ -116,6 +116,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .form-grop .grop-ver .grop-hor .address-box,
 .form-grop .grop-ver .address-box{
     width: 400px;
+    box-sizing: border-box;
 }
 .btn-check {
     background-color: #000;
@@ -138,8 +139,8 @@ input[type="number"]::-webkit-outer-spin-button {
     gap: var(--space-normal);
 }
 .radio-form{
-    width: 20px;
-    height: 20px;
+    width: 0.9rem;
+    height: 0.9rem;
     margin-right: 0.5rem;
 }
 .form-grop .grop-hor{
