--- a/css/skincare/cleaner-toner.css
+++ b/css/skincare/cleaner-toner.css
@@ -11,6 +11,11 @@
     display: none;
 }
 
+.list{
+    width: 100%;
+    justify-content: center;
+}
+
 .list ul{
     display: flex;
     justify-content: center;
